--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 project(HttpServer)
 
-add_executable(HttpServer src/main.c src/http_manager.c src/http_manager.h)
+add_executable(HttpServer src/main.c src/http_manager.c src/http_manager.h
+                          src/file_tree.h src/file_tree.c)
+target_link_libraries(HttpServer m)
